# MiniCppProjectWithCmake

./: CMakeLists.txt  LICENSE.md  README.md
MiniProject_1/: CMakeLists.txt
MiniProject_1/dep/inc/: pseudoFunctions.h
MiniProject_1/dep/src/: pseudoFunctions.cpp
MiniProject_1/src/: miniProj1.cpp
